--- a/src/style.css
+++ b/src/style.css
@@ -201,3 +201,71 @@ header button {
     justify-content: end;
 }
 
+/* Community */
+
+.community-section {
+    margin: 0 auto 0 auto;
+    padding-top: 70px;
+    height: 80vh;
+    width: 80%;
+    justify-content: center;
+    align-items: center;
+}
+
+.community-section h1 {
+    margin: 20px auto 30px auto;
+    font-size: 2.5vw;
+    color: #000;
+    font-weight: 700;
+}
+
+.community-section h3 {
+    font-size: 1.2vw;
+    width: 90%;
+    justify-content: start;
+    font-weight: 500;
+    padding-bottom: 20px;
+}
+
+.community-cards {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;;
+    padding: 10px;
+}
+
+.community-item {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.community-item img {
+    width: 100%;
+}
+
+.community-item h4 {
+    justify-content: start;
+    align-items: flex-start;
+    padding: 10px;
+}
+
+.community-item p {
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2vw;
+    margin: 10px;
+    height: 100%;
+}
+
+.btn-community {
+    padding: 10px 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: var(--secondary-color);
+    color: #fff;
+    border-color: var(--secondary-color);
+    justify-content: end;
+    align-items: flex-end;
+}
