--- a/src/style.css
+++ b/src/style.css
@@ -269,3 +269,33 @@ header button {
     justify-content: end;
     align-items: flex-end;
 }
+
+/* Footer */
+
+footer {
+    background-color: black;
+    color: white;
+    font-size: 1vw;
+    height: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+}
+
+footer div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+
+footer img {
+    width: 50px;
+    height: 50px;
+}
+
+footer h5 {
+    font-size: 1.2vw;
+    font-weight: 300;
+}
