--- a/assets/style.css
+++ b/assets/style.css
@@ -35,7 +35,7 @@ header {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
 }
 
-header .logo {
+header .menu-branding {
     font-weight: 400;
     color: #000;
     align-items: center;
@@ -44,7 +44,7 @@ header .logo {
     flex-direction: row;
 }
 
-header .logo img {
+header .menu-branding img {
     width: 60px;
     height: 60px;
     margin-right: 10px;
@@ -54,12 +54,12 @@ header h1 {
     height: 100%;
 }
 
-header .navbar {
+header .div-navbar {
     height: 100%;
     align-items: center;
 }
 
-header .menu {
+header .navbar {
     height: 100%;
     list-style: none;
     display: flex;
@@ -90,8 +90,11 @@ header button {
 
 #register {
     background-color: var(--secondary-color);
-    color: rgb(255, 255, 255);
     border-color: var(--secondary-color);
+}
+
+#register a {
+    color: #fff;
 }
 
 /* Hero */
@@ -298,3 +301,152 @@ footer h5 {
     font-size: 1.2vw;
     font-weight: 300;
 }
+
+/* Apply responsive design to css with script from ./assets/main.js */
+@media (max-width: 850px){
+    header .nav-item {
+        display: none;
+    }
+
+    .hero-section{
+        height: 100vh;
+    }
+
+
+}
+
+@media screen and (max-width: 768px) {
+    /*header responsive*/
+    header .menu-branding {
+        display: none;
+    }
+    header {
+        display: flex;
+        height: 100px;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    header .navbar {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    header li {
+        margin: 10px 5px;
+    }
+    header .nav-item{
+        display: flex;
+        font-size: 2.8vw;
+    }
+    header button {
+        margin: 10px 0;
+        /*    change size button small*/
+        padding: 10px 20px;
+    }
+    /*hero responsive*/
+
+
+    .hero-section {
+        height: 100vh;
+    }
+    .hero-section h1 {
+        font-size: 8vw;
+    }
+    .hero-section p {
+        font-size: 3vw;
+    }
+    .hero-section button {
+        font-size: 3vw;
+    }
+    .about-section {
+        height: 120vh;
+        padding: 0 5%;
+    }
+    .about-section h1 {
+        font-size: 5vw;
+    }
+    .about-section .about-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .about-content .about-items {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        padding: 10px;
+    }
+    .about-items h3 {
+        font-size: 3vw;
+        width: 90%;
+        justify-content: start;
+    }
+    .about-items p {
+        justify-content: center;
+        align-items: center;
+        font-size: 2vw;
+        margin: 10px;
+        height: 100%;
+    }
+    .about-items button {
+        font-size: 2vw;
+    }
+    .community-section {
+        height: 150vh;
+        width: 70%;
+        padding-top: 100px;
+        justify-content: center;
+        align-items: center;
+    }
+    .community-section h1 {
+        font-size: 5vw;
+    }
+    .community-section h3 {
+        font-size: 3vw;
+        width: 90%;
+        justify-content: start;
+        font-weight: 500;
+        padding-bottom: 20px;
+    }
+    .community-cards {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;;
+        padding: 10px;
+    }
+    .community-item {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    .community-item img {
+        margin-top: 10px;
+        width: 100%;
+    }
+    .community-item h4 {
+        justify-content: start;
+        align-items: flex-start;
+        padding: 10px;
+    }
+    .community-item p {
+        justify-content: center;
+        align-items: center;
+        font-size: 2vw;
+        margin: 10px;
+        height: 100%;
+    }
+    .btn-community {
+        font-size: 2vw;
+    }
+    footer {
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        align-items: center;
+    }
+}
+
